# auto_usa

./: .dockerignore  .env.example  .gitignore  Dockerfile  america_backup.sql  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pyproject.toml
calculator/: admin.py  apps.py  models.py  urls.py
calculator/api/: serializers.py  views.py
calculator/migrations/: 0001_initial.py  0002_alter_location_options.py
car_auction/: asgi.py  settings.py  urls.py  wsgi.py
car_site/: admin.py  forms.py  models.py  urls.py  validators.py  views.py
car_site/migrations/: 0001_initial.py  0002_europecard_koreacard_usacard_delete_card.py  0003_advuser_phone_number.py  0004_usaphoto.py  0005_alter_usaphoto_options_usapaymentfile.py  0006_alter_usapaymentfile_options_and_more.py  0007_europepaymentfile_europephoto_koreapaymentfile_and_more.py  0008_userbalance.py  0009_userbalance_description.py  0010_advuser_balance.py  0011_usaphoto_comment.py  0012_alter_userbalance_date_created_usacustomdocument_and_more.py  0013_usaextralink_name.py  0014_auction_alter_usacard_auction_platform_and_more.py  0015_auctiondata.py  0016_rename_allowedcombination_usaallowedcombination_and_more.py  0017_alter_auctiondata_card_alter_usacard_price_and_more.py  0018_alter_auctiondata_card_alter_usapayment_card_and_more.py  0019_usapayment_tax_sum_alter_auctiondata_auction_and_more.py  0021_alter_europephoto_options_and_more.py  (+13 more)
data/: car_site_usaallowedcombination.csv  car_site_usaauction.csv  car_site_usaplatform.csv
exchange_rates/: admin.py  apps.py  models.py  services.py  urls.py
(+36 files in other folders)
