[tool.poetry]
name = "car-auction"
version = "0.1.0"
description = ""
authors = ["alex <aleexzhuravlev@gmail.com>"]
readme = "README.md"
packages = [{include = "car_auction"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
psycopg2-binary = "^2.9.9"
django-bootstrap5 = "^23.4"
pillow = "^10.2.0"
gunicorn = "^21.2.0"
drf-yasg = "^1.21.8"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
